# ct-liver-segmentation

./: .gitignore  CMakeLists.txt  LiverSegmentation.cxx  LiverSegmentationAllImages.cxx  LiverSegmentationMultipleSeeds.cxx  WatershedSegmentation.cxx
best_outputs/: 330x215_96.dcm  330x215_96_160.dcm  96x160.dcm
images/: 000001.dcm
images-3d/: 1.3.6.1.4.1.14519.5.2.1.8421.4008.282428385511621114748193036663.19930329.mhd
salida/: salida1.dcm  salida10.dcm  salida11.dcm  salida12.dcm  salida13.dcm  salida14.dcm  salida15.dcm  salida16.dcm  salida17.dcm  salida18.dcm  salida19.dcm  salida2.dcm  salida20.dcm  salida21.dcm  salida22.dcm  salida23.dcm  salida24.dcm  salida25.dcm  salida26.dcm  salida27.dcm  salida28.dcm  salida29.dcm  salida3.dcm  salida30.dcm  salida31.dcm  salida32.dcm  salida33.dcm  salida34.dcm  salida35.dcm  salida4.dcm  salida5.dcm  salida6.dcm  salida7.dcm  salida8.dcm  salida9.dcm
